fix ADWD-984 Spacing bei Zeitraum anpassen

--- a/Resources/Private/Templates/Extensions/find/germaniasacra/Resources/sass/germania-sacra.scss
+++ b/Resources/Private/Templates/Extensions/find/germaniasacra/Resources/sass/germania-sacra.scss
@@ -48,7 +48,7 @@
 			}
 
 			.inputContainer {
-				margin-left: $formLabelWidth + 10px;
+				margin-left: $formLabelWidth + 5px;
 			}
 		}
 	}
